--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next build && next start",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
-    "next": "v12.2.6-canary.1",
+    "next": "v12.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
