--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "v12.3.1-canary.2",
+    "next": "12.3.2-canary.27",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
